--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,20 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<h2 style="justify-self: center;">Upload Files</h2>
+
+<%= form_with url: generate_summaries_path, method: :post, multipart: true, class: "container", local: true do |f| %>
+  <div class="mb-3">
+    <label for="excel_file" class="form-label">Upload Excel File (Topics)</label>
+    <%= f.file_field :excel_file, class: "form-control", required: true %>
+  </div>
+
+  <div class="mb-3">
+    <label for="pdf_files" class="form-label">Upload PDF Files</label>
+    <%= f.file_field :pdf_files, multiple: true, class: "form-control", required: true %>
+  </div>
+
+  <%= f.submit "Generate Summary", class: "btn btn-primary" %>
+<% end %>
+
+<% if @generated_file %>
+  <h3>Download Summary</h3>
+  <a href="<%= url_for(@generated_file) %>" class="btn btn-success">Download Excel</a>
+<% end %>
