--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,21 +12,20 @@
   </head>
 
   <body>
-    <% flash.each do |type, message| %>
-      <div class="alert alert-<%= type == "notice" ? "success" : "danger" %> alert-dismissible fade show" role="alert">
-        <%= message %>
-        <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
-      </div>
-    <% end %>
-    <nav>
-      <% if user_signed_in? %>
-        <p>Welcome, <%= current_user.email %></p>
-        <%= button_to "Sign Out", destroy_user_session_path, method: :delete, class: "btn btn-danger" %>
+    <nav class="bg-primary-subtle navbar navbar-expand-lg navbar-light px-3">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="/">PdfSummarizer</a>
 
-      <% else %>
-        <%= link_to 'Sign Up', new_user_registration_path %> |
-        <%= link_to 'Login', new_user_session_path %>
-      <% end %>
+        <div class="collapse navbar-collapse justify-content-end">
+          <% if user_signed_in? %>
+            <span class="navbar-text me-3">Welcome, <strong><%= current_user.email %></strong></span>
+            <%= button_to "Sign Out", destroy_user_session_path, method: :delete, class: "btn btn-danger" %>
+          <% else %>
+            <%= link_to "Sign Up", new_user_registration_path, class: "btn btn-primary me-2" %>
+            <%= link_to "Login", new_user_session_path, class: "btn btn-success" %>
+          <% end %>
+        </div>
+      </div>
     </nav>
 
     <%= yield %>
